tests/ui/borrowck/issue-7573.stderr
error[E0521]: borrowed data escapes outside of closure
  --> $DIR/issue-7573.rs:17:9
   |
LL |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |         ---------------- `lines_to_use` declared here, outside of the closure body
LL |
LL |     let push_id = |installed_id: &CrateId| {
   |                    ------------ `installed_id` is a reference that is only valid in the closure body
LL |
LL |         lines_to_use.push(installed_id);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `installed_id` escapes the closure body here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0521`.
